--- a/P_08/P_08.vcxproj.filters
+++ b/P_08/P_08.vcxproj.filters
@@ -33,5 +33,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
