--- a/PrimeFactors/PrimeFactors.vcxproj
+++ b/PrimeFactors/PrimeFactors.vcxproj
@@ -128,7 +128,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="prime_factors.cpp" />
-    <ClCompile Include="prime_factors_test.cpp" />
+    <ClCompile Include="prime_factors_test.cpp">
+      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'"> %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
